- Implemented: Option to hide Sensor's from whom it's hardware is disabled
- Implemented: Devices Over, added log icon for Chime and Thermostat
- Fixed: Correct colour will now be send to AppLamp/Fibaro RGBW from timers
- Implemented: Blockly, switch light on/off after xxx seconds
- Changed: Increased Shortlog resolution for Gas/Water sensors
- Changed: Counter reports will now include 'today'

Version 1.0.1680 (April 21th 2014)
- Implemented: Support for Forecast.io
- Implemented: Temperature/Weather widgets forecast button if hardware is WU/Forecast.io
- Implemented: Widgets now turn yellow (if no timeout) if the battery level is <= 10 percent
- Implemented: Temperature Month/Year graphs now display min/max as a range
- Implemented: Temperature Month/Year graphs now displays Average Temperature
- Fixed: Scene/Group editor now displays Level is the first light/switch supports it when entering the page
- Changed: Raspberry Pi temperature reporting intern. (Should save an extra return in the log output)
- Changed: Mobile Dashboard now uses buttons to toggle state
- Implemented: EnOcean ESP2 (TCM-120) support for On/Off/Dimmer, Temperature, Humidity and Light Sensors
- Changed/Fixed: OTGW TCP/IP working now
- Implemented: OTGW, option to specify outside temperature sensor (hardware setup)
- Implemented: OpenZWave, option to configure node list settings
- Implemented: OpenZWave, option to delete failed nodes
- Changed: All external hardware sensors without RF now reports rssi level 12
- Implemented: Option to display temperature in Fahrenheit
- Fixed: Razberry, problem with door sensors
- Implemented: Charts have now a dropdown option, export to CVS
- Implemented: Option to control Meiantech security status
- Implemented: Light Log, Arm/Disarm/Motion/No Motion now also visible in graph
- Implemented: OpenZWave, option to include/exclude nodes, support for windows COM port numbers greater then 9